Bugfix/UI: Switch to using visibility CSS property to hide drag element
This prevents some flicker we were seeing using `display: none`.  Also
removed a no-longer-used function.

--- a/web/css/ntango.css
+++ b/web/css/ntango.css
@@ -398,7 +398,7 @@
 }
 
 .nt-block-drag {
-  display: none;
+  visibility: hidden;
   position: absolute;
   z-index: 1;
 }
